Fix scrollbars appearing on Windows PC

--- a/frontend/components/UI/Layout/Layout.module.css
+++ b/frontend/components/UI/Layout/Layout.module.css
@@ -5,6 +5,7 @@
 /* Make all sections inherit the same styling. */
 .mainContent section {
     width: 100vw;
+    max-width: 100%;
     height: 100vh;
     padding-top: 7.5vh;
 }
